--- a/zingbite/pom.xml
+++ b/zingbite/pom.xml
@@ -4,4 +4,12 @@
   <artifactId>zingbite</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
+  <dependencies>
+  	<dependency>
+	    <groupId>com.mysql</groupId>
+	    <artifactId>mysql-connector-j</artifactId>
+	    <version>8.0.33</version>
+	</dependency>
+  </dependencies>
 </project>
