--- a/zingbite/src/main/webapp/WEB-INF/web.xml
+++ b/zingbite/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>Menu</display-name>
+    <servlet-name>Menu</servlet-name>
+    <servlet-class>com.app.zingbiteServlets.Menu</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Menu</servlet-name>
+    <url-pattern>/Menu</url-pattern>
+  </servlet-mapping>
 </web-app>
